add story installation docs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,10 +11,14 @@
     "esModuleInterop": true,
     "module": "esnext",
     "moduleResolution": "node",
+    "baseUrl": "./",
+    "paths": {
+      "@components/*": ["src/components/*"]
+    },
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve"
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/theme.config.tsx", "src/components/TendermintPrerequisites.mdx"],
   "exclude": ["node_modules"]
 }
