--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "nextra-docs-template",
+  "name": "aldebaranode-docs",
   "version": "0.0.1",
-  "description": "Nextra docs template",
+  "description": "Aldebaranode Blockchain Docs & Guide",
+  "type": "module" ,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,16 +10,16 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/shuding/nextra-docs-template.git"
+    "url": "git+https://github.com/aldebaranode/docs.git"
   },
   "author": "Shu Ding <g@shud.in>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/shuding/nextra-docs-template/issues"
+    "url": "https://github.com/aldebaranode/docs/issues"
   },
-  "homepage": "https://github.com/shuding/nextra-docs-template#readme",
+  "homepage": "https://github.com/aldebaranode/docs#readme",
   "dependencies": {
-    "next": "^13.0.6",
+    "next": "latest",
     "nextra": "latest",
     "nextra-theme-docs": "latest",
     "react": "^18.2.0",
