--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Aldebaranode Blockchain Docs & Guide",
   "type": "module" ,
   "scripts": {
-    "dev": "next dev -H 0.0.0.0",
+    "dev": "next dev",
     "build": "next build",
-    "start": "next start -H 0.0.0.0"
+    "start": "next start"
   },
   "repository": {
     "type": "git",
